milestone2/modules/pod/route_table_private.tf
resource "aws_route_table" "private" {
  vpc_id = data.aws_vpc.vpc.id
  tags   = { Name = local.route_table_name_private }
}

resource "aws_route" "default_route_to_nat_gw" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gw.id
}

resource "aws_route_table_association" "private_app" {
  subnet_id      = aws_subnet.private_app.id
  route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_db" {
  subnet_id      = aws_subnet.private_db.id
  route_table_id = aws_route_table.private.id
}
